Fixes grid on large desktops and sets hero to full bleed

--- a/web/components/Header.module.css
+++ b/web/components/Header.module.css
@@ -28,10 +28,15 @@
   }
 
   @nest & img, & svg {
-    height: 2.5rem;
+    height: 1.5rem;
     width: auto;
     color: inherit;
     vertical-align: top;
+
+    
+    @media (--media-min-medium) {
+      height: 2.5rem;
+    }
   }
 
   @nest & svg path {
@@ -151,15 +156,10 @@
   position: fixed;
   right: 0;
   top: 0;
-  padding: 1.5rem;
   z-index: 1001;
+  padding: 1.5rem;
+  padding-left: 0.8rem;
   cursor: pointer;
-}
-
-.hamburgerIcon {
-  display: block;
-  width: 100%;
-  height: 100%;
 }
 
 .closeIcon {
